--- a/.env.production
+++ b/.env.production
@@ -43,9 +43,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=1404669
-PUSHER_APP_KEY=6e98bd53f4a98b248a81
-PUSHER_APP_SECRET=97dfdbec8eba11e0567a
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=eu
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
