--- a/.env.production
+++ b/.env.production
@@ -50,3 +50,6 @@ PUSHER_APP_CLUSTER=eu
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GRAYLOG_HOST=10.110.0.4
+GRAYLOG_PORT=12201
