--- a/composer.json
+++ b/composer.json
@@ -3,18 +3,12 @@
     "type": "project",
     "description": "Cache service for diagro platform",
     "keywords": ["diagro", "services", "cache"],
-    "license": "MIT",
-    "version": "1.2.1",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/diagro-git/lib_laravel_token.git"
-        }
-    ],
+    "license": "Beerware",
+    "version": "1.3",
     "require": {
         "php": "^8.1",
         "ext-pdo": "*",
-        "diagro/lib_laravel_token": "^1.0",
+        "diagro/lib_laravel_token": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "graylog2/gelf-php": "^1.7",
         "hedii/laravel-gelf-logger": "^7.1",
@@ -66,10 +60,7 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true,
-        "github-oauth": {
-            "github.com": "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"
-        }
+        "sort-packages": true
     },
     "minimum-stability": "stable",
     "prefer-stable": true
